Nested use of same SVG resource fails https://bugs.webkit.org/show_bug.cgi?id=130127

Reviewed by Said Abou-Hallawa.

Merge https://src.chromium.org/viewvc/blink?view=revision&revision=175129

* LayoutTests/svg/custom/pattern-3-step-cycle-dynamic-1-expected.txt: Added.
* LayoutTests/svg/custom/pattern-3-step-cycle-dynamic-1.html: Added.
* LayoutTests/svg/custom/pattern-3-step-cycle-dynamic-2-expected.txt: Added.
* LayoutTests/svg/custom/pattern-3-step-cycle-dynamic-2.html: Added.
* LayoutTests/svg/custom/pattern-3-step-cycle-dynamic-3-expected.txt: Added.
* LayoutTests/svg/custom/pattern-3-step-cycle-dynamic-3.html: Added.
* LayoutTests/svg/custom/pattern-3-step-cycle-dynamic-4-expected.txt: Added.
* LayoutTests/svg/custom/pattern-3-step-cycle-dynamic-4.html: Added.
* LayoutTests/svg/custom/pattern-directly-and-indirectly-referenced-expected.svg: Added.
* LayoutTests/svg/custom/pattern-directly-and-indirectly-referenced.svg: Added.
* LayoutTests/svg/custom/pattern-false-resource-cycle-expected.html: Added.
* LayoutTests/svg/custom/pattern-false-resource-cycle.html: Added.
* LayoutTests/svg/custom/pattern-within-other-pattern-expected.html: Added.
* LayoutTests/svg/custom/pattern-within-other-pattern.html: Added.
* Source/WebCore/rendering/svg/SVGResourcesCycleSolver.cpp:
(WebCore::SVGResourcesCycleSolver::SVGResourcesCycleSolver): Deleted.
(WebCore::SVGResourcesCycleSolver::resourceContainsCycles):
(WebCore::SVGResourcesCycleSolver::resolveCycles):
(WebCore::SVGResourcesCycleSolver::breakCycle):
* Source/WebCore/rendering/svg/SVGResourcesCycleSolver.h:
(WebCore::SVGResourcesCycleSolver::SVGResourcesCycleSolver):

Canonical link: https://commits.webkit.org/264618@main