Source/WebCore/rendering/svg/SVGResourcesCache.cpp
@@ -45,8 +45,7 @@ void SVGResourcesCache::addResourcesFromRenderer(RenderElement& renderer, const 
     SVGResources& resources = *m_cache.add(&renderer, WTFMove(newResources)).iterator->value;
 
     // Run cycle-detection _afterwards_, so self-references can be caught as well.
-    SVGResourcesCycleSolver solver(renderer, resources);
-    solver.resolveCycles();
+    SVGResourcesCycleSolver::resolveCycles(renderer, resources);
 
     // Walk resources and register the render object at each resources.
     WeakHashSet<RenderSVGResourceContainer> resourceSet;
